gitops/workspace-namespaces/coder-workspaces/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: coder-workspaces
  labels:
    app.kubernetes.io/name: coder-workspaces
